--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack",
+    "dev": "webpack-dev-server --open",
+    "middle": "babel-node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,15 +25,23 @@
     "babel-plugin-import": "^1.6.7",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^0.28.11",
+    "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.1.0",
     "manifest-webpack-plugin": "^0.2.0",
     "path": "^0.12.7",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
     "style-loader": "^0.20.3",
     "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13"
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-middleware": "^3.1.0",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-hot-middleware": "^2.21.2"
   }
 }
