--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "start": "webpack",
     "dev": "webpack-dev-server --open",
-    "middle": "babel-node server.js"
+    "middle": "babel-node server.js",
+    "mdev": "babel-node --presets=env,stage-0 ./build/task/dev.js --dev",
+    "mtest": "babel-node --presets=env,stage-0 ./build/task/build.js --test",
+    "mbeta": "babel-node --presets=env,stage-0 ./build/task/build.js --beta",
+    "mprod": "babel-node --presets=env,stage-0 ./build/task/build.js --prod"
   },
   "repository": {
     "type": "git",
@@ -15,9 +18,13 @@
   "author": "chenchao",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.5"
+    "axios": "^0.18.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^8.2.0",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -27,21 +34,32 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chalk": "^2.3.2",
     "clean-webpack-plugin": "^0.1.19",
     "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.1.0",
+    "http-proxy-middleware": "^0.18.0",
+    "ip": "^1.1.5",
     "manifest-webpack-plugin": "^0.2.0",
+    "node-sass": "^4.8.3",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
     "path": "^0.12.7",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "postcss-loader": "^2.1.3",
+    "progress-bar-webpack-plugin": "^1.11.0",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-middleware": "^3.1.0",
     "webpack-dev-server": "^3.1.1",
-    "webpack-hot-middleware": "^2.21.2"
+    "webpack-hot-middleware": "^2.21.2",
+    "webpack-manifest-plugin": "^2.0.0-rc.2",
+    "webpack-notifier": "^1.6.0",
+    "yargs": "^11.0.0",
+    "zip-webpack-plugin": "^3.0.0"
   }
 }
