--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.5",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react-dom": "^16.3.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
