--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.1.0",
     "http-proxy-middleware": "^0.18.0",
     "ip": "^1.1.5",
     "manifest-webpack-plugin": "^0.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "path": "^0.12.7",
@@ -56,7 +56,7 @@
     "progress-bar-webpack-plugin": "^1.11.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "webpack": "^4.4.1",
+    "webpack": "^4.5.0",
     "webpack-cli": "^2.0.13",
     "webpack-dev-middleware": "^3.1.0",
     "webpack-dev-server": "^3.1.1",
