--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "mdev": "babel-node --presets=env,stage-0 ./build/task/dev.js --dev",
     "mtest": "babel-node --presets=env,stage-0 ./build/task/build.js --test",
     "mbeta": "babel-node --presets=env,stage-0 ./build/task/build.js --beta",
-    "mprod": "babel-node --presets=env,stage-0 ./build/task/build.js --prod"
+    "mprod": "babel-node --presets=env,stage-0 --plugins=transform-runtime,add-module-exports ./build/task/build.js --prod"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-import": "^1.6.7",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
@@ -44,6 +45,8 @@
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
+    "fs": "0.0.1-security",
+    "ftp": "^0.3.10",
     "html-webpack-plugin": "^3.1.0",
     "http-proxy-middleware": "^0.18.0",
     "ip": "^1.1.5",
@@ -54,6 +57,8 @@
     "path": "^0.12.7",
     "postcss-loader": "^2.1.3",
     "progress-bar-webpack-plugin": "^1.11.0",
+    "promptly": "^2.2.0",
+    "request": "^2.85.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.5.0",
