--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack4",
+  "name": "webpack4-test",
   "version": "1.0.0",
   "description": "test",
   "main": "index.js",
@@ -20,8 +20,8 @@
     "classnames": "^2.2.5",
     "jsencrypt": "^3.0.0-beta.1",
     "prop-types": "^15.6.1",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2"
@@ -61,7 +61,7 @@
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.6.0",
+    "webpack": "^4.8.3",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-middleware": "^3.1.0",
@@ -70,5 +70,12 @@
     "webpack-notifier": "^1.6.0",
     "yargs": "^11.0.0",
     "zip-webpack-plugin": "^3.0.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/chenchaoc/w4/issues"
+  },
+  "homepage": "https://github.com/chenchaoc/w4#readme",
+  "keywords": [
+    "webpack4-test"
+  ]
 }
