--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "jsencrypt": "^3.0.0-beta.1",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2"
@@ -42,6 +42,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^0.28.11",
+    "estraverse": "^4.2.0",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
@@ -61,7 +62,7 @@
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.8.3",
+    "webpack": "^4.14.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-middleware": "^3.1.0",
