--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "author": "chenchao",
   "license": "ISC",
   "dependencies": {
+    "antd": "^3.14.0",
     "axios": "^0.18.0",
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "jsencrypt": "^3.0.0-beta.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-redux": "^5.0.7",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2"
   },
@@ -50,6 +52,8 @@
     "html-webpack-plugin": "^3.1.0",
     "http-proxy-middleware": "^0.18.0",
     "ip": "^1.1.5",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "manifest-webpack-plugin": "^0.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
